RENO-1651: Adjust basis for search input to avoid wrapping at small screen sizes

--- a/src/components/location-finder/SearchAutoSuggest/SearchAutoSuggest.scss
+++ b/src/components/location-finder/SearchAutoSuggest/SearchAutoSuggest.scss
@@ -1,6 +1,6 @@
 // React Autosuggest
 .react-autosuggest__container {
-  flex: 0 2 70%;
+  flex: 0 2 66%;
   @include breakpoint($breakpoint-large) {
     flex: 0 0 50%;
   }
